--- a/index.html
+++ b/index.html
@@ -185,4 +185,5 @@
 </script>
 <script src="./js/index.js"></script>
 <script src="./js/index 静态属性抽象类.js"></script>
+<script src="./js/index 接口.js"></script>
 </html>
