--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <div id="box">box </div>
+    <div class="box">
+        <span>多行文字</span>
+    </div>
 </body>
 <script>
     // function Person() {
@@ -186,4 +188,41 @@
 <script src="./js/index.js"></script>
 <script src="./js/index 静态属性抽象类.js"></script>
 <script src="./js/index 接口.js"></script>
+<script src="./js/index 泛型.js"></script>
+<style>
+    /* .box {
+  width: 200px;
+  height: 200px;
+  background: red;
+  position: absolute; 
+  top: 50%;
+  left: 50%;
+  margin-top: -100px;
+  margin-left: -100px;
+} */
+
+/* .box{
+    width: 200px;
+  height: 200px;
+    position: absolute;
+    background: red;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+} */
+
+.box{
+    width: 100px;
+    height: 100px;
+    background: red;
+    position: absolute;/*或fixed*/
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+    margin: auto;
+}
+
+
+</style>
 </html>
