--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
 <script src="./js/index 静态属性抽象类.js"></script>
 <script src="./js/index 接口.js"></script>
 <script src="./js/index 泛型.js"></script>
+<script src="./js/index 类 接口 泛型统一封装.js"></script>
 <style>
     /* .box {
   width: 200px;
