--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
 <script src="./js/index 泛型.js"></script>
 <script src="./js/index 类 接口 泛型统一封装.js"></script>
 <script src="./js/index 命名空间.js"></script>
+<script src="./js/index 装饰器.js"></script>
 <style>
     /* .box {
   width: 200px;
